JBMESSAGING-806: Allow JBM client to run in a jnlp (or other) sandbox
* added RestrictedSecurityClientTest to check the minimal set of permissions required to run a JBM client (which sends a message)